# musubi-eval

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: claude_code_nq_implementation_prompt.md
examples/: scenario.yaml  scenario_nq_1000.yaml  tuning.yaml  tuning_nq_1000.yaml
examples/data/: documents.jsonl  queries.jsonl
musubi_eval/: __init__.py  cli.py  client.py  config.py  dataset.py  metrics.py  pipeline.py  reporting.py  util.py
musubi_eval/application/: ports.py  run_scenario.py  tune_params.py
musubi_eval/domain/: metrics.py  models.py
musubi_eval/infrastructure/: dataset_jsonl.py  musubi_http.py  results_filesystem.py  tuning_results.py
scripts/: build_nq_subset.py  run_eval.sh  validate_dataset.py
tests/: conftest.py  test_config.py  test_dataset.py  test_metrics.py  test_nq_build.py  test_results_filesystem.py  test_run_scenario.py  test_search_payload.py  test_tuning.py  test_validate_dataset.py
