[project]
name = "musubi-eval"
version = "0.1.0"
description = "Python evaluation harness for musubi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pytest>=8.0.0,<9.0.0",
  "pandas>=2.0.0,<3.0.0",
  "evidently>=0.7.0,<0.8.0",
  "mlflow>=2.12.0,<3.0.0",
  "requests==2.32.3",
  "PyYAML==6.0.2",
]

[project.scripts]
musubi-eval = "musubi_eval.cli:main"
